[JENKINS-13489] Fix highlight for partially covered branches. (#34)

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -50,12 +50,7 @@ table.source tr.coverPart {
 }
 
 table.source tr.coverPart td.hits, table.source tr.coverNone td.hits {
-    background-color: #fdd;
     font-weight: bold;
-}
-
-table.source tr.coverPart td.code {
-    background-color: #fdd;
 }
 
 table.source tr.coverNone {
